Il programma dovrebbe andare bene per qualsiasi sistema operativo